# finRAG

./: .env.example  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: eval.yaml  model.yaml  retrieval.yaml
configs/eval/: default.json
configs/generation/: default.json
configs/parser/: default.json  table_sensitive.json
configs/retrieval/: default.json  mock_local.json
data/demo_samples/: synthetic_pages.jsonl
data/eval/: synthetic_eval.jsonl
data/indexes/_tmpcheck/: default__vector_store.json  docstore.json  index_store.json
data/indexes/retrieval_mock/: chunks.jsonl  index_manifest.json
data/parsed/: all_pages.llamaindex.jsonl  phase1_ascii_sample.llamaindex.jsonl  phase1_ascii_sample.pages.jsonl  phase1_ascii_sample.parsed.json  phase1_sample.llamaindex.jsonl  phase1_sample.pages.jsonl  phase1_sample.parsed.json
docs/: architecture.md
docs/decisions/: phase1_parser_framework_vs_custom.md  phase2_retrieval_framework_vs_custom.md  phase3_hybrid_rerank_framework_vs_custom.md
scripts/: ask.py  build_bm25.py  build_chunks.py  build_faiss.py  build_index.py  ingest_and_parse.py  inspect_chunks.py  launch_demo.py  parse_pdf.py  run_eval.py  run_retrieval.py  run_retrieval_eval.py
src/: __init__.py
src/core/: __init__.py  schemas.py
src/rag_fin/: __init__.py  schemas.py
src/rag_fin/demo/: __init__.py
src/serving/: __init__.py  schemas.py
src/utils/: __init__.py  config.py  io.py  logger.py  text.py
tests/: test_config.py  test_hybrid_rerank.py  test_io.py  test_parsing.py  test_retrieval.py  test_schemas.py
(+30 files in other folders)
